feat: add age and gender fields in the form

--- a/formulaire.html
+++ b/formulaire.html
@@ -10,10 +10,25 @@
 
 <label for="nom">Nom :</label>
 <input type="text" id="nom" name="nom"> <br>
-
+<br>
 <label for="prenom">Prénom :</label>
 <input type="text" id="prenom" name="prenom">
 
+<br>
+<br>
+<label for="age">Âge :</label>
+<input type="number" id="age" name="age" min="0" max="140">
+
+<br>
+<br>
+
+<label>Sexe :</label>
+<input type="radio" id="homme" name="sexe" value="homme">
+<label for="homme">Homme</label>
+<input type="radio" id="femme" name="sexe" value="femme">
+<label for="femme">Femme</label>
+<input type="radio" id="autre" name="sexe" value="autre">
+<label for="autre">Autre</label>
 
 
 
