feat: add email and comment field

--- a/formulaire.html
+++ b/formulaire.html
@@ -23,13 +23,21 @@
 <br>
 
 <label>Sexe :</label>
+
 <input type="radio" id="homme" name="sexe" value="homme">
 <label for="homme">Homme</label>
+
 <input type="radio" id="femme" name="sexe" value="femme">
 <label for="femme">Femme</label>
+
 <input type="radio" id="autre" name="sexe" value="autre">
 <label for="autre">Autre</label>
 
+<br>
+<br>
+ <!--ajout de l'obligation de répondre-->
+<label>Adresse mail</label>
+<input type="email" id="email" name="adresse-mail" placeholder="ton@email.com" required>
 
 
 
