feat: add postal code and city

--- a/formulaire.html
+++ b/formulaire.html
@@ -39,9 +39,19 @@
 <label>Adresse mail</label>
 <input type="email" id="email" name="adresse-mail" placeholder="ton@email.com" required>
 
+<ul>
+    <li> 
+        <label for="codepostal">Code postal :</label>
+        <input type="text" id="codepostal" name="codepostal" required>
+    </li>
+</ul>
 
-
-
+<ul>
+    <li>
+        <label for="ville">Ville :</label>
+        <input type="text" id="ville" name="ville" required>
+    </li>
+</ul>
 
 
 
