feat: add nationality and other choice

--- a/formulaire.html
+++ b/formulaire.html
@@ -53,8 +53,34 @@
     </li>
 </ul>
 
+<ul>
+    <li>
+        <label for="métier exercé">Métier exercé :</label>
+        <select id="métier exercé" name="métier exercé" required>
+            <option value="">-- Sélectionnez un métier --</option>
+            <option value="développeur">Développeur</option>
+            <option value="designer">Designer</option>
+            <option value="chef de projet">Chef de projet</option>
+            <option value="autre">Autre</option>
+        </select>
+        <label for="autre">Si autre, précisez :</label>
+        <input type="text" id="autre" name="autre">
+    </li>
+</ul>
 
-
+<ul>
+    <li>
+        <label for="pays">Pays :</label>
+        <select id="pays" name="pays" required>
+            <option value="France" selected> France</option>
+            <option value="Belgique">Belgique</option>
+            <option value="Canada">Canada</option>
+            <option value="autre">Autre</option>
+        </select>
+        <label for="autre">Si autre, précisez :</label>
+        <input type="text" id="autre" name="autre">
+    </li>
+</ul>
 
 
 
