feat: add birthdate and country of birth

--- a/formulaire.html
+++ b/formulaire.html
@@ -52,7 +52,7 @@
         <input type="text" id="ville" name="ville" required>
     </li>
 </ul>
-
+<!--ajout de la fonction autre-->
 <ul>
     <li>
         <label for="métier exercé">Métier exercé :</label>
@@ -82,7 +82,26 @@
     </li>
 </ul>
 
+<ul>
+    <li>
+        <label for="date_naissance">Date de naissance :</label>
+        <input type="date" id="date_naissance" name="date_naissance" required>
+    </li>
+</ul>
 
+<ul>
+    <li>
+        <label for="pays de naissance"> Pays de naissance :</label>
+        <select id="pays de naissance" name="pays de naissance" required>
+        <option value="France" selected> France</option>
+        <option value="Belgique">Belgique</option>
+        <option value="Canada">Canada</option>
+        <option value="autre">Autre</option>
+        </select>
+        <label for="autre">Si autre, précisez :</label>
+        <input type="text" id="autre" name="autre">
+    </li>
+</ul>
 
 
 
