feat: add passport issue date and expiration date

--- a/formulaire.html
+++ b/formulaire.html
@@ -118,7 +118,19 @@
         pattern="[A-Z]{2}[0-9]{7}" placeholder="AB1234567" required>
     </li>
 </ul>
+<ul>
+    <li>
+        <label for="date de délivrance du passeport">Date de délivrance du passeport :</label>
+        <input type="date" id="date de délivrance du passeport" name="date de délivrance du passeport" required>
+    </li>
+</ul>
 
+<ul>
+    <li>
+        <label for="date de validité du passeport">Date de validité du passeport :</label>
+        <input type="date" id="date de validité du passeport" name="date de validité du passeport" required>
+    </li>
+</ul>
 </body>
 
 </html>
