fix: correct invalid IDs and duplicate attributes in form

--- a/formulaire.html
+++ b/formulaire.html
@@ -65,8 +65,8 @@
 <!--ajout de la fonction autre-->
 <ul>
     <li>
-        <label for="métier exercé">Métier exercé :</label>
-        <select id="métier exercé" name="métier exercé" required>
+        <label for="métier-exercé">Métier exercé :</label>
+        <select id="métier-exercé" name="métier exercé" required>
             <option value="">-- Sélectionnez un métier --</option>
             <option value="développeur">Développeur</option>
             <option value="designer">Designer</option>
