fix: correct invalid IDs and duplicate attributes in form

--- a/formulaire.html
+++ b/formulaire.html
@@ -74,7 +74,7 @@
             <option value="autre">Autre</option>
         </select>
         <label for="autre">Si autre, précisez :</label>
-        <input type="text" id="autre" name="autre">
+        <input type="text" id="autre-text" name="autre-text">
     </li>
 </ul>
 
