fix: resolve duplicate IDs and improve select default option

--- a/formulaire.html
+++ b/formulaire.html
@@ -37,7 +37,9 @@
 <label for="femme">Femme</label>
 
 <input type="radio" id="autre" name="sexe" value="autre">
-<label for="autre">Autre</label>
+<label for="sexe-autre">Autre</label>
+
+<input type="text" id="autre_text" name="autre_text">
      </li>
 </ul>
 
@@ -82,7 +84,7 @@
     <li>
         <label for="pays">Pays :</label>
         <select id="pays" name="pays" required>
-            <option value="France" selected> France</option>
+            <option value="France"> France</option>
             <option value="Belgique">Belgique</option>
             <option value="Canada">Canada</option>
             <option value="autre">Autre</option>
