--- a/formulaire.html
+++ b/formulaire.html
@@ -90,7 +90,7 @@
             <option value="autre">Autre</option>
         </select>
         <label for="autre">Si autre, précisez :</label>
-        <input type="text" id="autre" name="autre">
+        <input type="text" id="autre-text" name="autre-text">
     </li>
 </ul>
 
@@ -103,8 +103,8 @@
 
 <ul>
     <li>
-        <label for="pays de naissance"> Pays de naissance :</label>
-        <select id="pays de naissance" name="pays de naissance" required>
+        <label for="pays de naissance">Pays de naissance :</label>
+        <select id="pays-de-naissance" name="pays-de-naissance" required>
         <option value="France" selected> France</option>
         <option value="Belgique">Belgique</option>
         <option value="Canada">Canada</option>
