fix: resolve duplicate ID conflict for 'autre'

--- a/formulaire.html
+++ b/formulaire.html
@@ -36,7 +36,7 @@
 <input type="radio" id="femme" name="sexe" value="femme">
 <label for="femme">Femme</label>
 
-<input type="radio" id="autre" name="sexe" value="autre">
+<input type="radio" id="sexe-autre" name="sexe" value="autre">
 <label for="sexe-autre">Autre</label>
 
 <input type="text" id="autre_text" name="autre_text">
