fix: resolve duplicate ID and improve select default value

--- a/formulaire.html
+++ b/formulaire.html
@@ -104,14 +104,14 @@
 <ul>
     <li>
         <label for="pays de naissance">Pays de naissance :</label>
-        <select id="pays-de-naissance" name="pays-de-naissance" required>
-        <option value="France" selected> France</option>
+        <select id="pays de naissance" name="pays de naissance" required>
+        <option value="France"> France</option>
         <option value="Belgique">Belgique</option>
         <option value="Canada">Canada</option>
         <option value="autre">Autre</option>
         </select>
         <label for="autre">Si autre, précisez :</label>
-        <input type="text" id="autre" name="autre">
+        <input type="text" id="autre-text" name="autre-text">
     </li>
 </ul>
 <!--ajout d'un pattern pour que les numéros correspondent-->
