fix: correct IDs for passport issuance and validity dates

--- a/formulaire.html
+++ b/formulaire.html
@@ -132,15 +132,15 @@
 </ul>
 <ul>
     <li>
-        <label for="date de délivrance du passeport">Date de délivrance du passeport :</label>
-        <input type="date" id="date de délivrance du passeport" name="date de délivrance du passeport" required>
+        <label for="date-de-délivrance-du-passeport">Date de délivrance du passeport :</label>
+        <input type="date" id="date-de-délivrance-du-passeport" name="date-de-délivrance-du-passeport" required>
     </li>
 </ul>
 
 <ul>
     <li>
-        <label for="date de validité du passeport">Date de validité du passeport :</label>
-        <input type="date" id="date de validité du passeport" name="date de validité du passeport" required>
+        <label for="date-de-validité-du-passeport">Date de validité du passeport :</label>
+        <input type="date" id="date-de-validité-du-passeport" name="date-de-validité-du-passeport" required>
     </li>
 </ul>
 </body>
