fix: correct duplicate ID and add placeholder for select

--- a/formulaire.html
+++ b/formulaire.html
@@ -83,14 +83,14 @@
 <ul>
     <li>
         <label for="pays">Pays :</label>
-        <select id="pays" name="pays" required>
+        <select id="pays" name="pays">
             <option value="France"> France</option>
             <option value="Belgique">Belgique</option>
             <option value="Canada">Canada</option>
             <option value="autre">Autre</option>
         </select>
         <label for="autre">Si autre, précisez :</label>
-        <input type="text" id="autre-text" name="autre-text">
+        <input type="text" id="autre-pays" name="autre-pays">
     </li>
 </ul>
 
@@ -104,7 +104,7 @@
 <ul>
     <li>
         <label for="pays de naissance">Pays de naissance :</label>
-        <select id="pays de naissance" name="pays de naissance" required>
+        <select id="pays de naissance" name="pays de naissance">
         <option value="France"> France</option>
         <option value="Belgique">Belgique</option>
         <option value="Canada">Canada</option>
