fix: replace spaces with hyphens in 'pays de naissance' ID

--- a/formulaire.html
+++ b/formulaire.html
@@ -103,8 +103,8 @@
 
 <ul>
     <li>
-        <label for="pays de naissance">Pays de naissance :</label>
-        <select id="pays de naissance" name="pays de naissance">
+        <label for="pays-de-naissance">Pays de naissance :</label>
+        <select id="pays-de-naissance" name="pays-de-naissance">
         <option value="France"> France</option>
         <option value="Belgique">Belgique</option>
         <option value="Canada">Canada</option>
