fix: rename duplicate IDs for 'autre-text' and correct label associations

--- a/formulaire.html
+++ b/formulaire.html
@@ -75,8 +75,8 @@
             <option value="chef de projet">Chef de projet</option>
             <option value="autre">Autre</option>
         </select>
-        <label for="autre">Si autre, précisez :</label>
-        <input type="text" id="autre-text" name="autre-text">
+        <label for="autre-métier">Si autre, précisez :</label>
+        <input type="text" id="autre-métier" name="autre-métier">
     </li>
 </ul>
 
@@ -89,7 +89,7 @@
             <option value="Canada">Canada</option>
             <option value="autre">Autre</option>
         </select>
-        <label for="autre">Si autre, précisez :</label>
+        <label for="autre-pays">Si autre, précisez :</label>
         <input type="text" id="autre-pays" name="autre-pays">
     </li>
 </ul>
@@ -110,8 +110,8 @@
         <option value="Canada">Canada</option>
         <option value="autre">Autre</option>
         </select>
-        <label for="autre">Si autre, précisez :</label>
-        <input type="text" id="autre-text" name="autre-text">
+        <label for="autre-nationalité">Si autre, précisez :</label>
+        <input type="text" id="autre-nationalité" name="autre-nationalité">
     </li>
 </ul>
 <!--ajout d'un pattern pour que les numéros correspondent-->
