--- a/formulaire.html
+++ b/formulaire.html
@@ -143,6 +143,7 @@
         <input type="date" id="date-de-validité-du-passeport" name="date-de-validité-du-passeport" required>
     </li>
 </ul>
+<button type="submit">envoyer</button>
 </body>
 
 </html>
